# waseda-timeseriesanalysis-problemset2

./: Makefile  README.md  pyproject.toml
data/: NASDAQCOM.csv  SP500.csv
data/exercise2/: GDPDEF.csv  PPIACO.csv
notebooks/: PS2_liam-tessendorf.html  PS2_liam-tessendorf.ipynb
